Ajustando as classes AbrirArquivos, EscreverDados, escrevi os metodos abrirArquivosParaLeitura e abrirArquivosEscrever na classe AbrirArquivos